--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+*.mov
+*.mp4
+*.png
+*.jpeg
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
